--- a/template/section/header.html
+++ b/template/section/header.html
@@ -1,36 +1,245 @@
-<div id="header-section" class="header-bg">
-    <div class="container">
-        <nav class="navbar navbar-default navbar-custom">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-menu" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand-custom" href="#"><img class="img-responsive logo-img-custom" src="resources/images/logo.png" alt="Logo"></a>
+<div id="header-section" >
+            <div class="main">
+                <nav id="cbp-hrmenu" class="cbp-hrmenu">
+                    <a class="brand-custom" href="">
+                        <img class="img-responsive logo-img-custom" src="resources/images/logo.png" alt="Logo">
+                    </a>
+                    <ul>
+                        <li>
+                            <a href="">Menu 1</a>
+                            <div class="cbp-hrsub">
+                                <div class="cbp-hrsub-inner"> 
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 1.11</a></li>
+                                            <li><a href="">Submenu 1.12</a></li>
+                                            <li><a href="">Submenu 1.13</a></li>
+                                            <li><a href="">Submenu 1.14</a></li>
+                                            <li><a href="">Submenu 1.15</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 1.21</a></li>
+                                            <li><a href="">Submenu 1.22</a></li>
+                                            <li><a href="">Submenu 1.23</a></li>
+                                            <li><a href="">Submenu 1.24</a></li>
+                                            <li><a href="">Submenu 1.25</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 1.31</a></li>
+                                            <li><a href="">Submenu 1.32</a></li>
+                                            <li><a href="">Submenu 1.33</a></li>
+                                            <li><a href="">Submenu 1.34</a></li>
+                                            <li><a href="">Submenu 1.35</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="">Menu 2</a>
+                            <div class="cbp-hrsub">
+                                <div class="cbp-hrsub-inner">
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 2.11</a></li>
+                                            <li><a href="">Submenu 2.12</a></li>
+                                            <li><a href="">Submenu 2.13</a></li>
+                                            <li><a href="">Submenu 2.14</a></li>
+                                            <li><a href="">Submenu 2.15</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 2.21</a></li>
+                                            <li><a href="">Submenu 2.22</a></li>
+                                            <li><a href="">Submenu 2.23</a></li>
+                                            <li><a href="">Submenu 2.24</a></li>
+                                            <li><a href="">Submenu 2.25</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 2.31</a></li>
+                                            <li><a href="">Submenu 2.32</a></li>
+                                            <li><a href="">Submenu 2.33</a></li>
+                                            <li><a href="">Submenu 2.34</a></li>
+                                            <li><a href="">Submenu 2.35</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="">Menu 3</a>
+                            <div class="cbp-hrsub">
+                                <div class="cbp-hrsub-inner"> 
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 3.11</a></li>
+                                            <li><a href="">Submenu 3.12</a></li>
+                                            <li><a href="">Submenu 3.13</a></li>
+                                            <li><a href="">Submenu 3.14</a></li>
+                                            <li><a href="">Submenu 3.15</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 3.21</a></li>
+                                            <li><a href="">Submenu 3.22</a></li>
+                                            <li><a href="">Submenu 3.23</a></li>
+                                            <li><a href="">Submenu 3.24</a></li>
+                                            <li><a href="">Submenu 3.25</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 3.31</a></li>
+                                            <li><a href="">Submenu 3.32</a></li>
+                                            <li><a href="">Submenu 3.33</a></li>
+                                            <li><a href="">Submenu 3.34</a></li>
+                                            <li><a href="">Submenu 3.35</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="">Menu 4</a>
+                            <div class="cbp-hrsub">
+                                <div class="cbp-hrsub-inner"> 
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 4.11</a></li>
+                                            <li><a href="">Submenu 4.12</a></li>
+                                            <li><a href="">Submenu 4.13</a></li>
+                                            <li><a href="">Submenu 4.14</a></li>
+                                            <li><a href="">Submenu 4.15</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 4.21</a></li>
+                                            <li><a href="">Submenu 4.22</a></li>
+                                            <li><a href="">Submenu 4.23</a></li>
+                                            <li><a href="">Submenu 4.24</a></li>
+                                            <li><a href="">Submenu 4.25</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 4.31</a></li>
+                                            <li><a href="">Submenu 4.32</a></li>
+                                            <li><a href="">Submenu 4.33</a></li>
+                                            <li><a href="">Submenu 4.34</a></li>
+                                            <li><a href="">Submenu 4.35</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="">Menu 5</a>
+                            <div class="cbp-hrsub">
+                                <div class="cbp-hrsub-inner"> 
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 5.11</a></li>
+                                            <li><a href="">Submenu 5.12</a></li>
+                                            <li><a href="">Submenu 5.13</a></li>
+                                            <li><a href="">Submenu 5.14</a></li>
+                                            <li><a href="">Submenu 5.15</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 5.21</a></li>
+                                            <li><a href="">Submenu 5.22</a></li>
+                                            <li><a href="">Submenu 5.23</a></li>
+                                            <li><a href="">Submenu 5.24</a></li>
+                                            <li><a href="">Submenu 5.25</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 5.31</a></li>
+                                            <li><a href="">Submenu 5.32</a></li>
+                                            <li><a href="">Submenu 5.33</a></li>
+                                            <li><a href="">Submenu 5.34</a></li>
+                                            <li><a href="">Submenu 5.35</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="">Menu 6</a>
+                            <div class="cbp-hrsub">
+                                <div class="cbp-hrsub-inner"> 
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 6.11</a></li>
+                                            <li><a href="">Submenu 6.12</a></li>
+                                            <li><a href="">Submenu 6.13</a></li>
+                                            <li><a href="">Submenu 6.14</a></li>
+                                            <li><a href="">Submenu 6.15</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 6.21</a></li>
+                                            <li><a href="">Submenu 6.22</a></li>
+                                            <li><a href="">Submenu 6.23</a></li>
+                                            <li><a href="">Submenu 6.24</a></li>
+                                            <li><a href="">Submenu 6.25</a></li>
+                                        </ul>
+                                    </div>
+                                    <div>
+                                        <h4></h4>
+                                        <ul>
+                                            <li><a href="">Submenu 6.31</a></li>
+                                            <li><a href="">Submenu 6.32</a></li>
+                                            <li><a href="">Submenu 6.33</a></li>
+                                            <li><a href="">Submenu 6.34</a></li>
+                                            <li><a href="">Submenu 6.35</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href=""><i class="fa fa-sign-in"></i> Sign In</a>
+                        </li>
+                        <li>
+                            <a href=""><i class="fa fa-lock"></i> Register</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <div class="collapse navbar-collapse" id="main-menu">
-                <div class="row">
-                    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                        <a class="main-menu-logo" href=""><img class="img-responsive logo-img-custom" src="resources/images/logo.png" alt="Logo"></a>
-                    </div>
-                    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-                        <div class="pull-right">
-                            <ul class="menu-items">
-                                <li><a class="menu-item" href="">Buy</a></li>
-                                <li><a href="">Rent</a></li>
-                                <li><a href="">Find Agent</a></li>
-                                <li><a href="">House Prices</a></li>
-                                <li><a href="">Commercial</a></li>
-                                <li><a href="">Overseas</a></li>
-                                <li><a href=""><i class="fa fa-sign-in"></i> Sign In</a></li>
-                                <li><a href=""><i class="fa fa-lock"></i> Register</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </div>
 </div>
+<script src="resources/js/cbpHorizontalMenu.js"></script>
+<script>
+    $(function() {
+        cbpHorizontalMenu.init();
+    });
+</script>
