--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,29 @@ Theme Name: Property Auction
 Athour: A.LK.M. Nazmul Islam
 Version: 1.0
 */
-
+@font-face {
+    font-family: 'effra-medium';
+    src: url('../fonts/Effra_W_Md.eot');
+    src: url('../fonts/Effra_W_Mdd41d.eot?#iefix') format('embedded-opentype'), 
+        url('../fonts/Effra_W_Md.woff') format('woff'), 
+        url('../fonts/Effra_Md.ttf') format('truetype');
+    font-style: normal
+}
+@font-face {
+    font-family: 'effra-regular';
+    src: url('../fonts/Effra_W_Rg.eot');
+    src: url('../fonts/Effra_W_Rgd41d.eot?#iefix') format('embedded-opentype'), 
+        url('../fonts/Effra_W_Rg.woff') format('woff'), 
+        url('../fonts/Effra_Md.ttf') format('truetype');
+    font-style: normal
+}
+body{
+    background-color: #F5F5F5;
+    color: #404040;
+}
+h1,h2,h3,h4,h5,h6{
+    color: #05C2A2;
+}
 /* ---------------------------- Header -------------------------------- */
 
 
@@ -29,132 +51,226 @@ Version: 1.0
 /*2a8a85*/
 /* ---------------------------- Footer -------------------------------- */
 .footer-bg{
-    position: fixed; 
-    bottom: 0; 
-    width: 100%
+    position: fixed;
+    color: #404040;
+    bottom: 0;
+    width: 100%;
+    background-color: #EAEAEA;
+    box-shadow: inset 0 1px 0 #ddd;
+    z-index: 999;
 }
 .footer-border{
-    border-top: 4px solid #47a3da; 
+    border-top: 1px solid #ccc;
     padding: 8px 2px;
 }
 /* ---------------------------- Component -------------------------------- */
 .input-custom-field{
     border-radius: 0px;
-    height: 28px;
-    font-size: 12px;
-    padding: 3px 6px;
+    border: 1px solid #ccc;
 }
 .input-custom-field:focus{
-   border: 1px solid #47A3DA;
+    border: 2px solid #47A3DA;
 }
 .select-custom-field{
+    border: 1px solid #ccc;
     border-radius: 0px;
-    height: 28px;
-    font-size: 12px;
     padding: 6px 12px;
 }
 .select-custom-field:focus{
-   border: 1px solid #47A3DA;
+    border: 2px solid #47A3DA;
 }
-.button-custom-field{
-    background-color: #47a3da;
-    border: 1px solid #0f82c4;
+.common-custom-button{
+    font-family: 'effra-regular';
+    background-color: #00deb6;
+    border: 1px solid #00deb6;
+    color: #777;
+    border-radius: 2px;
+    padding: 6px 12px;
+}
+
+.common-custom-button:focus{
+    border: 1px solid #00deb6;
+}
+.large-button {
+    background-color: #1168b5;
     color: #fff;
-    border-radius: 0px;
-    height: 28px;
-    font-size: 12px;
-    padding: 3px 6px;
+    border-radius: 0;
+    border: 1px solid #1168b5;
+    text-align: center;
+    text-shadow: none;
+    font-weight: normal;
+    padding: 6px 12px;
+    width: 100%;
+    font-family: "Open Sans",Arial,sans-serif;
+    -webkit-appearance: none;
 }
-.button-custom-field:hover{
-    background-color: #fff;
-    border: 1px solid #0f82c4;
-    color: #47a3da;
-    border-radius: 0px;
-    height: 28px;
-    font-size: 12px;
-    padding: 3px 6px;
+.large-button:focus {
+    border: 1px solid #1168b5;
 }
-.button-custom-field:focus{
-   border: 1px solid #47A3DA;
-}
-.cancel-button-custom-field{
-    background-color: #d9534f;
-    border: 1px solid #C9302C;
-    color: #fff;
-    border-radius: 0px;
-    height: 28px;
-    font-size: 12px;
-    padding: 3px 6px;
-}
-.cancel-button-custom-field:hover{
-    background-color: #fff;
-    border: 1px solid #d9534f;
-    color: #C9302C;
-    border-radius: 0px;
-    height: 28px;
-    font-size: 12px;
-    padding: 3px 6px;
-}
-.cancel-button-custom-field:focus{
-   border: 1px solid #d9534f;
-}
-.warning-button-custom-field{
-    background-color: #ec971f;
-    border: 1px solid #d58512;
-    color: #fff;
-    border-radius: 0px;
-    height: 28px;
-    font-size: 12px;
-    padding: 3px 6px;
-}
-.warning-button-custom-field:hover{
-    background-color: #fff;
-    border: 1px solid #EC971F;
-    color: #ec971f;
-    border-radius: 0px;
-    height: 28px;
-    font-size: 12px;
-    padding: 3px 6px;
-}
-.warning-button-custom-field:focus{
-   border: 1px solid  #ec971f;
-}
+
 .pagination>li>a, .pagination>li>span{
-    border: 1px solid #337ab7;
+    border: 1px solid #0499A8;
+    color: #404040;
 }
 .pagination>li>a:hover, .pagination>li>span:hover,.pagination>li>a:focus, .pagination>li>span:focus{
-    border: 1px solid #337ab7;
-    background-color: #47a3da;
+    border: 1px solid #0499A8;
+    background-color: #0499A8;
     color: #fff;
 }
 .thead,thead:hover{
-     background-color: #47a3da!important;
-     color: #fff!important;
+    background-color: #0499A8!important;
+    color: #fff!important;
 }
 tr:nth-child(even) {
-    background-color: lavender;
+    background-color: #1168b5;
+    color: #fff;
 }
 tr:nth-child(odd) {
-    background-color: #FFFFE0;
+    background-color: #00deb6;
 }
 tr:hover {
-    background-color: #fff;
-    color: #47a3da;
     cursor: pointer;
 }
 .dropdown-menu>li>a,.dropdown-menu>li>a:focus{
-    color: #47a3da!important;
+    font-family: 'effra-regular';
+    color: #00deb6!important;
 }
 .dropdown-menu>li>a:hover{
-    background-color: #47a3da!important;
-    color: #fff!important;
+    font-family: 'effra-regular';
+    background-color: #00deb6!important;
+    color: #404040!important;
 }
 .dropdown-menu>li>a:hover{
-   background-color: lavenderblush;;
+    font-family: 'effra-regular';
+    background-color: lavenderblush;;
 }
-.progress{
-    background-color: #47A3DA;
+
+
+/*input[type=checkbox] {
+    height: 20px;
+    width: 20px;
+    background-color: red!important;
+    color: #f00;
+    font-style: normal;
+} 
+input[type=checkbox]:checked {
+    height: 20px;
+    width: 20px;
+    background-color: red!important;
+    color: #f00;
+    font-style: normal;
+} */
+.checkbox {
+    padding-left: 20px; }
+.checkbox label {
+    display: inline-block;
+    position: relative;
+    padding-left: 10px; }
+.checkbox label::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 0;
+    margin-left: -20px;
+    border: 1px solid #cccccc;
+    border-radius: 3px;
+    background-color: #fff;
+    -webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+    -o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+    transition: border 0.15s ease-in-out, color 0.15s ease-in-out; }
+.checkbox label::after {
+    display: inline-block;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    left: 0;
+    top: 0;
+    margin-left: -20px;
+    padding-left: 4px;
+    padding-top: 6px;
+    font-size: 12px;
+    color: #555555;
 }
+.checkbox input[type="checkbox"] {
+    opacity: 0; }
+.checkbox input[type="checkbox"]:focus + label::before {
+    outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px; }
+.checkbox input[type="checkbox"]:checked + label::after {
+    font-family: 'FontAwesome';
+    content: "\f00c"; }
+.checkbox input[type="checkbox"]:disabled + label {
+    opacity: 0.65; }
+.checkbox input[type="checkbox"]:disabled + label::before {
+    background-color: #eeeeee;
+    cursor: not-allowed; }
+
+.checkbox-danger input[type="checkbox"]:checked + label::before {
+    background-color: #11B667;
+    border-color: #11B667 
+}
+.checkbox-danger input[type="checkbox"]:checked + label::after {
+    color: #fff; }
+.radio {
+    padding-left: 20px; }
+.radio label {
+    display: inline-block;
+    position: relative;
+    padding-left: 5px; }
+.radio label::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 17px;
+    height: 17px;
+    left: 0;
+    margin-left: -20px;
+    border: 1px solid #cccccc;
+    border-radius: 50%;
+    background-color: #fff;
+    -webkit-transition: border 0.15s ease-in-out;
+    -o-transition: border 0.15s ease-in-out;
+    transition: border 0.15s ease-in-out; }
+.radio label::after {
+    display: inline-block;
+    position: absolute;
+    content: " ";
+    width: 11px;
+    height: 11px;
+    left: 3px;
+    top: 8px;
+    margin-left: -20px;
+    border-radius: 50%;
+    background-color: #11B667;
+    -webkit-transform: scale(0, 0);
+    -ms-transform: scale(0, 0);
+    -o-transform: scale(0, 0);
+    transform: scale(0, 0);
+    -webkit-transition: -webkit-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
+    -moz-transition: -moz-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
+    -o-transition: -o-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33);
+    transition: transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33); }
+.radio input[type="radio"] {
+    opacity: 0; }
+.radio input[type="radio"]:focus + label::before {
+    outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px; }
+.radio input[type="radio"]:checked + label::after {
+    -webkit-transform: scale(1, 1);
+    -ms-transform: scale(1, 1);
+    -o-transform: scale(1, 1);
+    transform: scale(1, 1); }
+.radio input[type="radio"]:disabled + label {
+    opacity: 0.65; }
+.radio input[type="radio"]:disabled + label::before {
+    cursor: not-allowed; }
+.radio.radio-inline {
+    margin-top: 0; }
+
 /* --------------------- Mobile and Tablet Device -------------------------------------  */
 @media only screen and (max-device-width : 767px) {
 
