--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,11 +20,13 @@ Version: 1.0
     font-style: normal
 }
 body{
+    font-family: 'effra-regular';
     background-color: #F5F5F5;
-    color: #404040;
+    color: #484848;
 }
 h1,h2,h3,h4,h5,h6{
-    color: #05C2A2;
+    font-family: 'effra-medium';
+    color: #393939;
 }
 /* ---------------------------- Header -------------------------------- */
 
@@ -52,10 +54,10 @@ h1,h2,h3,h4,h5,h6{
 /* ---------------------------- Footer -------------------------------- */
 .footer-bg{
     position: fixed;
-    color: #404040;
+    color: #484848;
     bottom: 0;
     width: 100%;
-    background-color: #EAEAEA;
+    background-color: #FFF;
     box-shadow: inset 0 1px 0 #ddd;
     z-index: 999;
 }
@@ -67,9 +69,10 @@ h1,h2,h3,h4,h5,h6{
 .input-custom-field{
     border-radius: 0px;
     border: 1px solid #ccc;
+    padding: 20px!important;
 }
 .input-custom-field:focus{
-    border: 2px solid #47A3DA;
+    border: 1px solid #00deb6!important;
 }
 .select-custom-field{
     border: 1px solid #ccc;
@@ -77,14 +80,14 @@ h1,h2,h3,h4,h5,h6{
     padding: 6px 12px;
 }
 .select-custom-field:focus{
-    border: 2px solid #47A3DA;
+    border: 1px solid #00deb6;
 }
 .common-custom-button{
     font-family: 'effra-regular';
     background-color: #00deb6;
     border: 1px solid #00deb6;
-    color: #777;
-    border-radius: 2px;
+    color: #fff;
+    border-radius: 0px;
     padding: 6px 12px;
 }
 
@@ -109,41 +112,38 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .pagination>li>a, .pagination>li>span{
-    border: 1px solid #0499A8;
-    color: #404040;
+    border: 1px solid #00deb6;
+    color: #484848;
 }
 .pagination>li>a:hover, .pagination>li>span:hover,.pagination>li>a:focus, .pagination>li>span:focus{
-    border: 1px solid #0499A8;
-    background-color: #0499A8;
+    border: 1px solid #00deb6;
+    background-color: #00deb6;
     color: #fff;
 }
 .thead,thead:hover{
-    background-color: #0499A8!important;
+    background-color: #00deb6!important;
     color: #fff!important;
 }
-tr:nth-child(even) {
+/*tr:nth-child(even) {
     background-color: #1168b5;
     color: #fff;
 }
 tr:nth-child(odd) {
     background-color: #00deb6;
-}
+}*/
 tr:hover {
     cursor: pointer;
 }
 .dropdown-menu>li>a,.dropdown-menu>li>a:focus{
     font-family: 'effra-regular';
-    color: #00deb6!important;
+    color: #484848!important;
 }
 .dropdown-menu>li>a:hover{
     font-family: 'effra-regular';
     background-color: #00deb6!important;
-    color: #404040!important;
+    color: #fff!important;
 }
-.dropdown-menu>li>a:hover{
-    font-family: 'effra-regular';
-    background-color: lavenderblush;;
-}
+
 
 
 /*input[type=checkbox] {
@@ -209,8 +209,8 @@ input[type=checkbox]:checked {
     cursor: not-allowed; }
 
 .checkbox-danger input[type="checkbox"]:checked + label::before {
-    background-color: #11B667;
-    border-color: #11B667 
+    background-color: #00deb6;;
+    border-color: #00deb6; 
 }
 .checkbox-danger input[type="checkbox"]:checked + label::after {
     color: #fff; }
@@ -244,7 +244,7 @@ input[type=checkbox]:checked {
     top: 8px;
     margin-left: -20px;
     border-radius: 50%;
-    background-color: #11B667;
+    background-color: #00deb6;
     -webkit-transform: scale(0, 0);
     -ms-transform: scale(0, 0);
     -o-transform: scale(0, 0);
@@ -297,4 +297,57 @@ and (max-device-width : 1199px) {
         margin-left: 220px;
         float: left;
     }
+}
+/* --------------------- Login -------------------------------------  */
+/*================================  pagelets  ================================*/
+.comment_box{
+
+}
+.pagelet_title{
+    font-family: 'effra-regular';
+    color: #00deb6;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+}
+.pagelet_title .active{
+    font-family: 'effra-regular';
+    color: #00deb6!important;
+    font-size: 24px!important;
+    font-weight: bold!important;
+    text-align: center!important;
+}
+.pagelet_title  a:focus,.pagelet_title a:visited{
+    border: none!important;
+    outline: none!important;
+    text-decoration: none!important;
+}
+.pagelet_title a{
+    font-family: 'effra-regular';
+    color: #00deb6;
+    font-size: 16px;
+    font-weight: normal;
+    text-align: center!important;
+}
+.pagelet_title a:hover{
+    text-decoration: none;
+}
+.pagelet{
+    background-color: white;
+    padding: 15px;
+    margin-bottom: 1px;
+    -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+}
+.pagelet_divider{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid lightgray;
+}
+.display-block{
+    display: none
+}
+.forgot-password{
+    margin-top: 15px;
 }
